; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_removegrain.c_mode22.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_removegrain.c_mode22.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32, i32, i32, i32, i32, i32)* @mode22 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mode22(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6, i32 %7, i32 %8) #0 {
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  store i32 %0, i32* %10, align 4
  store i32 %1, i32* %11, align 4
  store i32 %2, i32* %12, align 4
  store i32 %3, i32* %13, align 4
  store i32 %4, i32* %14, align 4
  store i32 %5, i32* %15, align 4
  store i32 %6, i32* %16, align 4
  store i32 %7, i32* %17, align 4
  store i32 %8, i32* %18, align 4
  %25 = load i32, i32* %11, align 4
  %26 = load i32, i32* %18, align 4
  %27 = add nsw i32 %25, %26
  %28 = add nsw i32 %27, 1
  %29 = ashr i32 %28, 1
  store i32 %29, i32* %19, align 4
  %30 = load i32, i32* %12, align 4
  %31 = load i32, i32* %17, align 4
  %32 = add nsw i32 %30, %31
  %33 = add nsw i32 %32, 1
  %34 = ashr i32 %33, 1
  store i32 %34, i32* %20, align 4
  %35 = load i32, i32* %13, align 4
  %36 = load i32, i32* %16, align 4
  %37 = add nsw i32 %35, %36
  %38 = add nsw i32 %37, 1
  %39 = ashr i32 %38, 1
  store i32 %39, i32* %21, align 4
  %40 = load i32, i32* %14, align 4
  %41 = load i32, i32* %15, align 4
  %42 = add nsw i32 %40, %41
  %43 = add nsw i32 %42, 1
  %44 = ashr i32 %43, 1
  store i32 %44, i32* %22, align 4
  %45 = load i32, i32* %19, align 4
  %46 = load i32, i32* %20, align 4
  %47 = call i32 @FFMIN(i32 %45, i32 %46)
  %48 = load i32, i32* %21, align 4
  %49 = load i32, i32* %22, align 4
  %50 = call i32 @FFMIN(i32 %48, i32 %49)
  %51 = call i32 @FFMIN(i32 %47, i32 %50)
  store i32 %51, i32* %23, align 4
  %52 = load i32, i32* %19, align 4
  %53 = load i32, i32* %20, align 4
  %54 = call i32 @FFMAX(i32 %52, i32 %53)
  %55 = load i32, i32* %21, align 4
  %56 = load i32, i32* %22, align 4
  %57 = call i32 @FFMAX(i32 %55, i32 %56)
  %58 = call i32 @FFMAX(i32 %54, i32 %57)
  store i32 %58, i32* %24, align 4
  %59 = load i32, i32* %10, align 4
  %60 = load i32, i32* %23, align 4
  %61 = load i32, i32* %24, align 4
  %62 = call i32 @av_clip(i32 %59, i32 %60, i32 %61)
  ret i32 %62
}

declare dso_local i32 @FFMIN(i32, i32) #1

declare dso_local i32 @FFMAX(i32, i32) #1

declare dso_local i32 @av_clip(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
